--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <style>
         .hero {
-            background-image: url('https://via.placeholder.com/1500x800'); /* Replace with your hero image URL */
+            background-image: url('https://via.placeholder.com/1500x800/032F30/6BA3BE');
             background-size: cover;
             background-position: center;
             height: 60vh;
@@ -50,11 +50,11 @@
         }
 
         .chemicals {
-            background-image: url('https://via.placeholder.com/700x300/1e90ff'); /* Replace with a chemical-themed image */
+            background-image: url('https://via.placeholder.com/700x300/0C969C/6BA3BE');
         }
 
         .beauty {
-            background-image: url('https://via.placeholder.com/700x300/ff69b4'); /* Replace with a beauty-themed image */
+            background-image: url('https://via.placeholder.com/700x300/0A7075/6BA3BE');
         }
 
         .product-card a {
@@ -63,39 +63,6 @@
             font-size: 1.5em;
             font-weight: bold;
             text-shadow: 1px 1px 2px #000000;
-        }
-
-        /* Footer styles */
-        footer {
-            background-color: #333;
-            color: #fff;
-            padding: 40px 20px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            flex-wrap: wrap;
-        }
-        .footer-left, .footer-right, .footer-middle {
-            flex: 1;
-            min-width: 200px;
-        }
-        .footer-left h4, .footer-right h4 {
-            margin-bottom: 10px;
-        }
-        .footer-middle {
-            text-align: center;
-        }
-        .highlight-button {
-            background-color: #f7b731;
-            color: #333;
-            padding: 15px 30px;
-            border-radius: 5px;
-            text-decoration: none;
-            font-weight: bold;
-            transition: background-color 0.3s;
-        }
-        .highlight-button:hover {
-            background-color: #fceb5a;
         }
     </style>
 </head>
@@ -127,7 +94,7 @@
 
         <section class="team-section">
             <div class="team-member">
-                <img src="https://via.placeholder.com/200" alt="Head Person 1">
+                <img src="https://via.placeholder.com/200/0A7075" alt="Head Person 1">
                 <div class="description-box">
                     <h3>Jane Doe</h3>
                     <p>Co-Founder & CEO</p>
@@ -135,7 +102,7 @@
                 </div>
             </div>
             <div class="team-member">
-                <img src="https://via.placeholder.com/200" alt="Head Person 2">
+                <img src="https://via.placeholder.com/200/0C969C" alt="Head Person 2">
                 <div class="description-box">
                     <h3>John Smith</h3>
                     <p>Head of Product Development</p>
