--- a/survey.html
+++ b/survey.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <style>
         .hero {
-            background-image: url('https://via.placeholder.com/1500x800/808080'); /* Replace with a survey-themed hero image */
+            background-image: url('https://via.placeholder.com/1500x800/032F30/6BA3BE');
             background-size: cover;
             background-position: center;
             height: 40vh;
@@ -29,11 +29,13 @@
             padding: 30px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            background-color: #ffffff;
         }
 
         .survey-container h2 {
             text-align: center;
             margin-bottom: 20px;
+            color: #031716;
         }
 
         .form-group {
@@ -44,16 +46,19 @@
             display: block;
             font-weight: bold;
             margin-bottom: 5px;
+            color: #031716;
         }
 
         .form-group input[type="text"],
         .form-group input[type="email"],
-        .form-group textarea {
+        .form-group textarea,
+        .form-group select {
             width: 100%;
             padding: 10px;
-            border: 1px solid #ccc;
+            border: 1px solid #6BA3BE;
             border-radius: 4px;
             box-sizing: border-box;
+            color: #031716;
         }
 
         .form-group textarea {
@@ -65,7 +70,7 @@
             display: block;
             width: 100%;
             padding: 15px;
-            background-color: #f7b731;
+            background-color: #274D60;
             color: white;
             border: none;
             border-radius: 5px;
@@ -75,7 +80,7 @@
         }
 
         .submit-button:hover {
-            background-color: #fceb5a;
+            background-color: #0C969C;
         }
     </style>
 </head>
