--- a/chemicals.html
+++ b/chemicals.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <style>
         .hero {
-            background-image: url('https://via.placeholder.com/1500x800/87cefa'); /* Replace with a chemical-themed hero image */
+            background-image: url('https://via.placeholder.com/1500x800/032F30/6BA3BE');
             background-size: cover;
             background-position: center;
             height: 40vh;
@@ -36,7 +36,7 @@
             gap: 20px;
             margin-bottom: 40px;
             padding: 20px;
-            border: 1px solid #ddd;
+            border: 1px solid #6BA3BE;
             border-radius: 8px;
             width: 80%;
         }
@@ -46,6 +46,7 @@
             height: 150px;
             object-fit: cover;
             border-radius: 8px;
+            border: 2px solid #0C969C;
         }
 
         .product-description {
@@ -54,6 +55,7 @@
 
         .product-description h3 {
             margin-top: 0;
+            color: #0A7075;
         }
     </style>
 </head>
@@ -78,20 +80,20 @@
 
         <section class="product-list">
             <div class="product-item">
-                <img src="https://via.placeholder.com/150/1e90ff" alt="Product 1">
+                <img src="https://via.placeholder.com/150/0C969C" alt="Product 1">
                 <div class="product-description">
                     <h3>Product Name 1</h3>
                     <p>A brief, compelling description of this chemical product. Mention its uses, benefits, and key features. Keep it concise and informative.</p>
                 </div>
             </div>
             <div class="product-item">
-                <img src="https://via.placeholder.com/150/00bfff" alt="Product 2">
+                <img src="https://via.placeholder.com/150/0A7075" alt="Product 2">
                 <div class="product-description">
                     <h3>Product Name 2</h3>
                     <p>Another brief, compelling description of this chemical product. Highlight what makes it unique and how it can help the customer.</p>
                 </div>
             </div>
-            </section>
+        </section>
     </main>
 
     <footer>
