made some slight changes

--- a/chemicals.html
+++ b/chemicals.html
@@ -68,7 +68,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="chemicals.html" class="active">Chemicals</a></li>
                 <li><a href="beauty.html">Beauty</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="#contact">Contact Us</a></li>
             </ul>
         </nav>
     </header>
@@ -105,7 +105,7 @@
         <div class="footer-middle">
             <a href="survey.html" class="highlight-button">Take Our Survey</a>
         </div>
-        <div class="footer-right">
+        <div class="footer-right" id ="contact">
             <h4>Contact Info</h4>
             <p>Email: contact@mycompany.com</p>
             <p>Phone: +1 (123) 456-7890</p>
